--- a/Personal Projects/Paracorded/styles.css
+++ b/Personal Projects/Paracorded/styles.css
@@ -1,48 +1,99 @@
 body {
     font-family: Verdana;
+
 }
 
 h1 {
     text-align: center;
     font-size: 300%;
+    margin-top: 100px;
+    margin-bottom:50px
 }
 
 .center {
-    margin: 5%;
+    margin: 8%;
     margin-top: 0%;
-    border: 5px solid #281d70;
-    padding: 10px;
+    padding: 25%;
+    padding-top:25px;
+    padding-bottom:0;
     border-radius: 10px;
 }
+
+.index_Back {
+    color:	#00a8f3;
+    background-color:#253542;
+    padding: 15px;
+}
+
 .top {
     position:fixed;
     width: 100%;
     top: 0;
     right: 0;
-    background-color: #171147;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-
+    background-color:#071e29;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    text-align: center;
+    transition-duration: 0.4s;
+    white-space-collapse: nowrap;
 }
-.index_Back {
-    color:#1d30da;
-    background-color:#000000;
+
+.top a {
+    margin: 15px;
+    padding: 15px;
+    padding-bottom: 18px;
+    padding-top: 18px;
+    color: #00a8f3;
+    background-color:#277ca5;
+    width: 120px;
+    border-radius: 13px;
+    display:inline-block;
+    transition-duration: 0.4s;
+}
+
+.top a:hover, .top a.active {
+    color:#113547;
+    background-color:#00a8f3;
+    font-weight: 1500;
+}
+
+.top a:hover{
+    margin: 5px;
     padding: 20px;
 }
 
-.linkbar {
-    margin: 5px;
-    top: 0;
-    color: #171147;
-    text-align: center;
-    white-space-collapse: nowrap;
-    font-size: 0px;
+.products {
+    margin: 15px;
+    margin-top: 0%;
+    padding: 100px;
+    padding-top:20px;
+    padding-bottom:0;
+}
+.logo {
+    width: 30%;
 }
 
-.link  {
-    margin: 10px;
-    width: 30px;
-    height: 30px;
-    border-radius: 10px;
-    display: inline-block;
+@media only screen and (max-width: 700px){
+    .logo{
+        width: 100%;
+    }
+    .center {
+        margin: 0;
+        padding: 15px;
+    }
+    .top a {
+        margin: 3%;
+        padding: 3%;
+        padding-bottom: 13px;
+        padding-top: 13px;
+        width: 20%;
+    }
+
+    .top a:active{
+        margin: 3%;
+        padding: 3%;
+    }
+    h2{
+        font-size: x-large;
+    }
 }
