--- a/Personal Projects/Paracorded/styles.css
+++ b/Personal Projects/Paracorded/styles.css
@@ -62,18 +62,48 @@ h1 {
     padding: 20px;
 }
 
-.products {
-    margin: 15px;
-    margin-top: 0%;
-    padding: 100px;
-    padding-top:20px;
-    padding-bottom:0;
-}
 .logo {
     width: 30%;
 }
 
+.mobile-only {
+    display: none;
+}
+.desktop-only {
+    display: contents;
+}
+
+.buttonT1 {
+
+}
+.buttonT2{
+    width: 180px;
+    height: 220px;
+    margin: 10px;
+    padding: 20px;
+    border-radius: 5px;
+    display: inline-table;
+    background-color: #071e29;
+    align-content: center
+}
+.buttonT1 h2 {
+    padding-left: 10px;
+    margin-bottom: 0;
+    margin-top: 30px;
+}
+.buttonT2 img{
+    width: 100%;
+}
+.buttonT2 h3 {
+    margin-top: 0;
+}
 @media only screen and (max-width: 700px){
+    .mobile-only {
+        display: contents;
+    }
+    .desktop-only {
+        display: none;
+    }
     .logo{
         width: 100%;
     }
@@ -95,5 +125,9 @@ h1 {
     }
     h2{
         font-size: x-large;
+    }
+    .buttonT2 {
+        width: 100px;
+        height: 130px;
     }
 }
