--- a/Personal Projects/Paracorded/styles.css
+++ b/Personal Projects/Paracorded/styles.css
@@ -30,6 +30,7 @@ h1 {
     width: 100%;
     top: 0;
     right: 0;
+    font-weight: 600;
     background-color:#071e29;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -39,6 +40,7 @@ h1 {
 }
 
 .top a {
+    font-weight: 900;
     margin: 15px;
     padding: 15px;
     padding-bottom: 18px;
@@ -60,6 +62,25 @@ h1 {
 .top a:hover{
     margin: 5px;
     padding: 20px;
+}
+
+.bottom {
+    position:fixed;
+    width: 20%;
+    bottom: 0;
+    right: 0;
+    background-color:#277ca5;
+    color:#113547;
+    border-top-left-radius: 15px;
+    text-align: center;
+    transition-duration: 0.4s;
+    white-space-collapse: nowrap;
+    font-weight: 900;
+    font-size: large;
+}
+
+.bottom a{
+    color:#00a8f3;
 }
 
 .logo {
