--- a/WTAOW/styles.css
+++ b/WTAOW/styles.css
@@ -1,52 +1,249 @@
+
 html {
-        background-image: image-set("Assets/Icon.png");
-        background-size: 10%;
+        width: 102%;
+        background-image: image-set("assets/Icon.png");
+        background-size: contain;
+        overflow-x: hidden;
+
 }
-body {
+.cover {
+        position: fixed;
         top: -10px;
         left: -10px;
-        position: fixed;
-        background-color: rgba(100, 100, 100, 0.9);
+        background-color: rgba(21, 21, 21, 0.8);
         background-size: cover;
         width: 100%;
         height: 100%;
+        overflow-x: hidden;
 }
+
+
+
 .top {
-        left:0;
-        top:0;
-        position: fixed;
-        width: 100%;
-        height: 60px;
-        background-color: rgba(0, 255, 255, 0.384);
-        padding: 0;
-        margin:0;
+        position:fixed;
+        width: 90%;
+        top: 0;
+        margin-right: 5%;
+        margin-left: 5%;
+        align-self: center;
+        font-weight: 900;
+        background-color:#0a9127be;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
         text-align: center;
+        transition-duration: 0.4s;
+        white-space-collapse: nowrap;
 }
+
 .top a {
-        display: inline-block;
-        margin: 5px;
-        width: 10%;
-        height:30px;
-        padding-left: 5%;
-        padding-right: 5%;
-        background-image: image-set("Assets/stone card.webp");
+        font-weight: 900;
+        font-size:x-large;
+        margin: 15px;
+        padding: 5px;
+        padding-bottom: 18px;
+        padding-top: 18px;
+        color: #000000;
+        background-color: #bdb64ea8;
+        background-size: cover;
+        width: 180px;
+        height: 30px;
+        border-radius: 13px;
+        display:inline-block;
+        transition-duration: 0.4s;
+        text-decoration: none;
 }
+.top a.active{
+        background-color: rgba(230, 220, 90, 0.87)
+}
+.top a.active:before{
+        background-color: rgba(230, 220, 90, 0.87)
+}
+.top a:hover{
+        animation: testAnim1 3s infinite;
+        -webkit-animation: testAnim1 3s infinite;
+        background-color: rgba(230, 220, 90, 0.87);
+}
+
+.top p{
+        position: absolute;
+        width: 178px;
+        top: 5%;
+        text-align: center;
+        transition-duration: 0.4;
+}
+.top a:hover p{
+        animation: testAnim2 3s infinite;
+        -webkit-animation: testAnim2 3s infinite;
+}
+
+.shader{
+        color:#00000080;
+        background-color: #00000054;
+        size: inherit;
+}
+
 .center {
-        top: 10px;
         left:10px;
+        margin-top: 300px;
+        width: 60%;
         padding-left:10%;
-        padding-right:10%
+        padding-right:10%;
+        font-size: x-large;
+}
+
+span.bigCap {
+        font-size: 200%;
 }
 
 
-@keyframes backgroundStart{
-        0%{
+.tooltip {
+        position: relative;
+        display: inline-block;
+      }
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 120px;
+        background-color: rgba(0, 0, 0, 0.444);
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        bottom: 100%;
+        left: 150%;
+        margin-left: -60px;
+      }
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+      }
+
+.socialsList{
+        margin:10%;
+        padding: 1px;
+        width: 80%;
+        margin-top: 140px;
+        left:15%;
+        color: aliceblue;
+        background-color: #00000080;
+        border-radius: 20px;
+        margin-bottom: 0;
+        padding-bottom: 0;
+}
+
+.social{
+        height: 220px;
+        width: 80%;
+        margin: 10%;
+        align-items: center;
+        border-radius:20px;
+        margin-bottom:0;
+        margin-top: 100px;
+}
+.social .body{
+        background-color: #3333336c;
+        position:relative;
+        height:240px;
+        top:0;
+        padding-top:40px;
+        border-radius: 20px;
+}
+.social h1{
+        height:35px;
+        position:relative;
+        background-color: #00000057;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        padding:5px;
+        padding-left:15px;
+        bottom:302px;
+}
+.social .body .text {
+        color: aliceblue;
+        font-size: x-large;
+        position:relative;
+        margin: 10px;
+        padding: 10px;
+        height: 90%;
+        display: inline-block;
+        width: 65%;
+        text-decoration: none;
+}
+.social .body .image{
+        transition-duration: 0.5s;
+        position:absolute;
+        padding:10px;
+        height:65%;
+        aspect-ratio: 1/1;
+        top:60px;
+        right:20px;
+        display: inline-block;
+        background-color: white;
+        background-size:contain;
+        border-radius: 15px;
+}
+
+.social .body .image:hover{
+        animation: spin 3s;
+        -webkit-animation: spin 3s;
+}
+
+
+
+@keyframes testAnim1{
+        0%  {background-color:rgba(230, 220, 90, 0.87)}
+        25% {background-color:rgba(241, 228, 80, 0.87)}
+        50% {background-color:rgba(230, 220, 90, 0.87)}
+        100%{background-color:rgba(230, 220, 90, 0.87)}
+
+}
+
+@keyframes spin{
+        0%{rotate: 0deg;}
+        10%{rotate:-15deg}
+        80%{rotate: 375deg}
+        100%{rotate: 360deg;}
+}
+
+.mobile{display:none;}
+@media only screen and (max-width: 700px){
+        html{background-size: 200%;}
+        .top {
+                width:100%;
+                margin:0;
+        }
+        .top a{
+                width: 90px;
+                margin: 5px;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                height: 15px;
+        }
+        .top a p{
+                width: 90px;
+        }
+        .socialsList{
+                margin-left:0;
+                width: 100%;
 
         }
-        50%{
-
+        .social{
+                margin:0;
+                width:100%;
+                height:280px;
+                margin-top: 100px;
         }
-        100%{
-
+        .social .body{
+                height:280px
         }
+        .social h1{
+                bottom:341px;
+        }
+        .social .body .image{
+                height: 80px;
+                width: 80px
+        }
+        .social .body .text{
+                font-size: medium;
+        }
+        .desktop{display: none;}
+        .mobile{display: contents;}
 }
