--- a/WTAOW/styles.css
+++ b/WTAOW/styles.css
@@ -1,16 +1,25 @@
 
 html {
-        width: 102%;
-        background-image: image-set("assets/Icon.png");
-        background-size: contain;
         overflow-x: hidden;
-
+        background-color: #000000;
+}
+.backing{
+        z-index: -1;
+        position: fixed;
+        top: 0;
+        right: 0;
+        background-image: image-set("assets/Icon.png");
+        background-size: 100%;
+        width: 100vw;
+        height: 100vw;
+        aspect-ratio: 23/27;
 }
 .cover {
+        z-index: -1;
         position: fixed;
-        top: -10px;
-        left: -10px;
-        background-color: rgba(21, 21, 21, 0.8);
+        top: 0;
+        left: 0;
+        background-color: rgba(21, 21, 21, 0.6);
         background-size: cover;
         width: 100%;
         height: 100%;
@@ -37,7 +46,7 @@ html {
 
 .top a {
         font-weight: 900;
-        font-size:x-large;
+        font-size:xx-large;
         margin: 15px;
         padding: 5px;
         padding-bottom: 18px;
@@ -51,6 +60,7 @@ html {
         display:inline-block;
         transition-duration: 0.4s;
         text-decoration: none;
+        text-shadow: 1px 0 #000;
 }
 .top a.active{
         background-color: rgba(230, 220, 90, 0.87)
@@ -67,7 +77,7 @@ html {
 .top p{
         position: absolute;
         width: 178px;
-        top: 5%;
+        top: -3%;
         text-align: center;
         transition-duration: 0.4;
 }
@@ -82,17 +92,41 @@ html {
         size: inherit;
 }
 
+.poster{
+        position: absolute;
+        display: none;
+        top:-10px;
+        left: -10px;
+        z-index: 8;
+        width: calc(100vw + 20px);
+        padding-top:20px;
+        margin: 0;
+        height: 150vh;
+        background: linear-gradient(180deg, #000000, #000000, rgba(0, 0, 0, 0.0));
+        transition-duration: 3000ms;
+}
+.poster img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        top: 0;
+        padding-top:0;
+        padding-bottom:0;
+        height: 100vh;
+}
+
 .center {
         left:10px;
         margin-top: 300px;
         width: 60%;
-        padding-left:10%;
-        padding-right:10%;
+        padding:5%;
         font-size: x-large;
-}
-
-span.bigCap {
-        font-size: 200%;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: rgba(0, 0, 0, 0.444);
+        border-radius: 30px;
+        height: 50vh;
+        transition-duration: 0.5s;
 }
 
 
@@ -102,7 +136,7 @@ span.bigCap {
       }
       .tooltip .tooltiptext {
         visibility: hidden;
-        width: 120px;
+        width: 160px;
         background-color: rgba(0, 0, 0, 0.444);
         text-align: center;
         border-radius: 6px;
@@ -120,7 +154,7 @@ span.bigCap {
         margin:10%;
         padding: 1px;
         width: 80%;
-        margin-top: 140px;
+        margin-top: 200px;
         left:15%;
         color: aliceblue;
         background-color: #00000080;
@@ -130,6 +164,7 @@ span.bigCap {
 }
 
 .social{
+        transition-duration: 1000ms;
         height: 220px;
         width: 80%;
         margin: 10%;
@@ -164,14 +199,14 @@ span.bigCap {
         padding: 10px;
         height: 90%;
         display: inline-block;
-        width: 65%;
+        width: 70%;
         text-decoration: none;
 }
 .social .body .image{
-        transition-duration: 0.5s;
+        transition-duration: 3s;
         position:absolute;
         padding:10px;
-        height:65%;
+        height:60%;
         aspect-ratio: 1/1;
         top:60px;
         right:20px;
@@ -180,13 +215,12 @@ span.bigCap {
         background-size:contain;
         border-radius: 15px;
 }
-
+/*
 .social .body .image:hover{
         animation: spin 3s;
         -webkit-animation: spin 3s;
 }
-
-
+*/
 
 @keyframes testAnim1{
         0%  {background-color:rgba(230, 220, 90, 0.87)}
@@ -206,11 +240,22 @@ span.bigCap {
 .mobile{display:none;}
 @media only screen and (max-width: 700px){
         html{background-size: 200%;}
+        .backing{
+                height: 100vh;
+                aspect-ratio: 23/27;
+                width: auto;
+        }
+        .cover{
+                background-color: rgba(41, 41, 41, 0.703);
+        }
         .top {
+                top: 0;
+                left: 0;
                 width:100%;
                 margin:0;
         }
         .top a{
+                font-size: larger;
                 width: 90px;
                 margin: 5px;
                 margin-top: 15px;
@@ -219,11 +264,29 @@ span.bigCap {
         }
         .top a p{
                 width: 90px;
+                top: 11px
+        }
+        .center{
+                margin-top: 200px;
+                width: 90%;
+                height: calc(-200px + 100vh)
+        }
+        .poster{
+                margin: 0;
+                left: -50px;
+                width: calc(100% + 100px);
+        }
+        .poster img{
+                margin: 0;
+                margin-top: 100px;
+                margin-left: 10%;
+                width: calc(100% - 100px);
+                height: calc((21/16)*110vw);
         }
         .socialsList{
                 margin-left:0;
                 width: 100%;
-
+                background-color: #0000002c;
         }
         .social{
                 margin:0;
@@ -238,11 +301,13 @@ span.bigCap {
                 bottom:341px;
         }
         .social .body .image{
-                height: 80px;
-                width: 80px
+                width: 20%;
+                aspect-ratio: 1/1;
+                height: auto;
         }
         .social .body .text{
                 font-size: medium;
+                width: 60%;
         }
         .desktop{display: none;}
         .mobile{display: contents;}
