--- a/WTAOW/styles.css
+++ b/WTAOW/styles.css
@@ -1,5 +1,6 @@
 
 html {
+        overflow-y: overlay;
         overflow-x: hidden;
         background-color: #000000;
 }
@@ -8,7 +9,7 @@ html {
         position: fixed;
         top: 0;
         right: 0;
-        background-image: image-set("assets/Icon.png");
+        background-image: image-set("assets/background.png");
         background-size: 100%;
         width: 100vw;
         height: 100vw;
@@ -30,10 +31,10 @@ html {
 
 .top {
         position:fixed;
-        width: 90%;
+        width: 90vw;
+        margin-left: 5vw;
+        margin-right: 5vw;
         top: 0;
-        margin-right: 5%;
-        margin-left: 5%;
         align-self: center;
         font-weight: 900;
         background-color:#0a9127be;
@@ -41,26 +42,61 @@ html {
         border-bottom-right-radius: 15px;
         text-align: center;
         transition-duration: 0.4s;
-        white-space-collapse: nowrap;
+        z-index: 5;
+        height: 115px;
 }
+.top .links{
+        padding-left: 2.5%;
+        padding-right: 5%;
+        position:fixed;
+        display: flex;
+        overflow-x: overlay;
+        overflow-y: hidden;
+        width: 100%;
+        flex-wrap: nowrap;
+        z-index: 6;
+}
+.top .links::-webkit-scrollbar-track-piece{
+        background: #00000000;
+        width: 10vw;
+}        /*justify-content: center;*/
 
+::-webkit-scrollbar-thumb{
+        width: 1px;
+        background: rgba(0, 0, 0, 0.432);
+        height: 1px;
+        border-radius: 100px;
+        -webkit-border-radius: 100px;
+        -moz-border-radius: 100px;
+        -ms-border-radius: 100px;
+        -o-border-radius: 100px;
+}
+::-webkit-scrollbar{
+        width: 5px;
+        height: 5px;
+}
+::-webkit-scrollbar-track-piece{
+        background: #00000000;
+}
 .top a {
+        transition-duration: 0.4s;
         font-weight: 900;
-        font-size:xx-large;
+        font-size:xxx-large;
         margin: 15px;
         padding: 5px;
         padding-bottom: 18px;
-        padding-top: 18px;
+        padding-top: 8px;
         color: #000000;
         background-color: #bdb64ea8;
         background-size: cover;
-        width: 180px;
-        height: 30px;
+        width: 250px;
+        height: 45px;
         border-radius: 13px;
         display:inline-block;
         transition-duration: 0.4s;
         text-decoration: none;
         text-shadow: 1px 0 #000;
+        z-index: 6;
 }
 .top a.active{
         background-color: rgba(230, 220, 90, 0.87)
@@ -69,8 +105,8 @@ html {
         background-color: rgba(230, 220, 90, 0.87)
 }
 .top a:hover{
-        animation: testAnim1 3s infinite;
-        -webkit-animation: testAnim1 3s infinite;
+        /*animation: testAnim1 3s infinite;
+        -webkit-animation: testAnim1 3s infinite;*/
         background-color: rgba(230, 220, 90, 0.87);
 }
 
@@ -94,9 +130,9 @@ html {
 
 .poster{
         position: absolute;
-        display: none;
+        display: flex;
         top:-10px;
-        left: -10px;
+        left:0px;
         z-index: 8;
         width: calc(100vw + 20px);
         padding-top:20px;
@@ -104,15 +140,17 @@ html {
         height: 150vh;
         background: linear-gradient(180deg, #000000, #000000, rgba(0, 0, 0, 0.0));
         transition-duration: 3000ms;
+        justify-content: center;
 }
 .poster img{
-        display: block;
+        display: flex;
         margin-left: auto;
         margin-right: auto;
         top: 0;
         padding-top:0;
         padding-bottom:0;
         height: 100vh;
+        justify-self: center;
 }
 
 .center {
@@ -135,6 +173,7 @@ html {
         display: inline-block;
       }
       .tooltip .tooltiptext {
+        z-index: 10;
         visibility: hidden;
         width: 160px;
         background-color: rgba(0, 0, 0, 0.444);
@@ -253,18 +292,21 @@ html {
                 left: 0;
                 width:100%;
                 margin:0;
+                height: 95px;
+        }
+        .top .links{
+                padding-left: 0%;
+                padding-right: 0;
+                margin-right: 0;
         }
         .top a{
-                font-size: larger;
-                width: 90px;
+                font-size: xx-large;
+                width: 190px;
                 margin: 5px;
                 margin-top: 15px;
                 margin-bottom: 15px;
-                height: 15px;
-        }
-        .top a p{
-                width: 90px;
-                top: 11px
+                padding-top: 10px;
+                padding-bottom: 0px;
         }
         .center{
                 margin-top: 200px;
@@ -273,15 +315,14 @@ html {
         }
         .poster{
                 margin: 0;
-                left: -50px;
-                width: calc(100% + 100px);
+                width: calc(100%);
+                z-index: 20;
         }
         .poster img{
                 margin: 0;
                 margin-top: 100px;
-                margin-left: 10%;
-                width: calc(100% - 100px);
-                height: calc((21/16)*110vw);
+                width: calc(100vw);
+                height: calc((21/16)*100vw);
         }
         .socialsList{
                 margin-left:0;
